--- a/notebooks/investigator.ipynb
+++ b/notebooks/investigator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -20,19 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "path = \"../data/stage_1_train/\"\n",
+    "path = \"../data/stage_1_fixes/stage1_train/\"\n",
     "names = os.listdir(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -48,20 +48,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "664"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {
     "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "train_names = names[:570]\n",
-    "val_names = names[570:]"
+    "train_names = names[:620]\n",
+    "val_names = names[620:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -83,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -113,10 +133,12 @@
     "        if use_padding:\n",
     "            im,mask = mirror(im, mask)\n",
     "        \n",
+    "        boarder = cv2.morphologyEx(mask, cv2.MORPH_GRADIENT, np.ones((2,2)))\n",
+    "        im_w_mask = (np.stack((im, mask, boarder), 2))\n",
     "        \n",
-    "        im_w_mask = (np.stack((im*255, mask), 2)).astype('uint8')\n",
+    "        \n",
     "        #print(im_w_mask.shape)\n",
-    "        np.save(\"../data/stage_1_processed/\" + prefix + \"/\" + prefix + \"_\" + name, im_w_mask)\n",
+    "        np.save(\"../data/ext_data_processed/\" + prefix + \"/\" + prefix + \"_\" + name, im_w_mask)\n",
     "        \n",
     "        if store:\n",
     "            im_w_mask_list.append(im_w_mask)\n",
@@ -128,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5c08500668d4cbe99eff07fe58588c0",
+       "model_id": "2007b5be4d4a4dc8b65260e6eeebf932",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,27 +166,33 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
-    "im_w_mask_list = process_data(val_names[:], prefix='val')"
+    "im_w_mask_list = process_data(train_names[:], prefix='train')#, store=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAksAAAJCCAYAAADQsoPKAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAIABJREFUeJzt3X+MLWl5H/jvk2EAE9uBMRjdOzNZ\nWGfQmlimjWYBCSlLwJuL0UpjS/YKr+QQC2myCUj2KrsC8seaREbCUQxKlBXZsSBAZBuPxkaMLOIb\nwCDLfxgYyPXwYwK+sVlzfe8ycWwwXqSJwe/+0dXMoW939enuc079+nykVndX1zn9njr1vvW8z1NV\np1prAQDgaH9l6AYAAIyZYAkAoIdgCQCgh2AJAKCHYAkAoIdgCQCgx9aCpap6eVV9rqquVtXrt/V/\nAAC2qbZxn6WquiXJ55P8j0muJfl4kh9vrX124/8MAGCLtpVZekGSq62132+t/dck70lyz5b+FwDA\n1jxhS897e5Ivrvx+LckLj1v56bfd0p51561basp2ff7hpwzdBI7xnO//2tBNOBP71DJNdX+dKv2M\nJPlq/vSPW2vPOGm9bQVLdcSyb6n3VdW9Se5Nkr9++xPysct3bqkp23Xp4t7QTeAYly9fGboJZ2Kf\nWqap7q9TpZ+RJB9sD/w/66y3rWDpWpLV6OeOJNdXV2it3ZfkviS5+3lPntwH1Olo43X5+nQPOvYr\ngPHZ1jlLH09yV1U9u6qemOSVSR7c0v/aOQe0cbt0cc97BMDGbCWz1Fr7elW9NsnlJLckeUdr7TPb\n+F8AANu0rTJcWmvvT/L+bT3/EGQr2Bb71nJNuWw8Vfobp7W1YGkudCq2zT4GMG4+7gQAoIfM0hHM\n9AGAA4IlABbBRJizUoYDAOghsxSzDYZhv4Pd0d84j0UHSzrPvF26uOeybFg44zyboAwHANBDsAQD\nMNsFmI5FlOEcmBgL+yLshr7GJsksAQD0mG1m6WBW4QRfhmBWC8PR/9i02QZLgiSSbx007ROMkYnd\n5giS2BZlOACAHrPKLB01qzBb48C2Z/BmtTAc/Y9tmk2wdFxH0YE4bBs3q7Sfwe7pd+yKMhwAQI/Z\nZJbgNDZ14reZLZviYoT16Xfs2miDpXVKJToMm3DUuUz2LRgP/ZGhKcMBAPQYRWbp8w8/Ze2ZgxkG\n22LfYiyU5PRHxmUUwdJxdBZg6bZx9eZYGfMZK2U4AIAeo84sATDvG+7KJjEFgiWACTocZMwleIIx\nUoYDAOghswQwA33lrMNZp21/TuJR/wumTLAEMHPrfnbmaYInQRBLogwHANBDZgmAJLJFS+MjxdYn\nWAKAhXDV5NkowwEA9JBZAoCZk1E6H5klAIAegiUAgB6CJQCAHoIlAIAegiUAgB6uhgMAvmkJN6M8\nuDrwlgvrrS9YAgBm7zy3T1CGAwDoIbMEG3ba2csSUt7AuM11HNrUzTgFS7AhZ+2Uq4+b64AFjNdc\nx51N3rVcGQ4AoIfMEmzApmYwl69fme0sDxjOksaVbXwOnmAJzmEbnfKo51zSQAdwVtv6wGBlOACA\nHjJLcEbbmsGc9L9kmQAet4uxWLAEp7TLIKnv/wuagCXb5VisDAcA0EOwBBM1dIYLYCi7Hv+U4eAU\nBCjAeZx0/qHbh/QbagyWWQIA6CGzBGuQUQLOom/sOO5vJ403S808DTkOC5YAYMNMsOZFGQ4AoIfM\nEhxjCjND91yC8dn22LG0m9SOYSwWLHFum9qRx9Tpx9A5gWkZYtxw9dxuKMMBAPSQWeImh2dHB7OW\nuWdb5v76gO0ZcvyYczl+LOOyYIlvOutlrNv4/7vs9GPpjADnMadzmcY2LivDAQD0kFlauLFF7weO\na9fUZ0vb4iRPGMaYx1BjwubILAEA9JBZYlI2nXEa66wQGL+xjx9TPfF7jNtVsLQwY9wJN+G0g8Jc\ntwPAYUpy56cMBwDQ41zBUlV9oao+VVVXquqhbtltVfWBqvq97vvTNtNUONmSM0aXr19Z9OsHjmd8\nOJ9NlOH+dmvtj1d+f32SD7XW3lxVr+9+f90G/g9ntLQOclJJbmnbA9isKY8hUz2PaWjbKMPdk+Rd\n3c/vSvLDW/gfAAA7cd7MUkvy76uqJfm/W2v3JXlma+1GkrTWblTVdx/1wKq6N8m9SfLkPOWczeCw\nKc98lm6MHy/T9xE4ZqgwPfru6Zw3WHpxa+16FxB9oKr+47oP7AKr+5LkO+u2ds52wGycN0g6zyC4\n7v9eXe+oxxiEgbO6dHFvVJPF5JxluNba9e77o0nem+QFSb5UVReSpPv+6HkbCQAwlDNnlqrqryb5\nK621r3Y//50k/zTJg0leleTN3ff3baKhnGxskThnM0QZbtP/67iyHUzdnMbZOX3w7radpwz3zCTv\nraqD5/ml1tpvVNXHk9xfVa9O8odJfuz8zaTPnDrvJh0uR01lO02lnadhUAam7MzBUmvt95M874jl\n/yXJy87TKACAsfBxJzBh5ynZDZXBkmViiuaY8V3l/kv9BEsTNfeOu2m21zgZoGFcxnJLgbHdQsVn\nwwEA9JBZggUay2ztgKvngDGTWYIJO+uHY449GPGhn4zJ0vbFMfW/sYxVgiUAgB7KcBMylkh/Smyz\no01lu7hyDobjZO/HCZYmYioHN4Y3hsENYNOGvMmwMhwAQA+ZpZGTUYJ9SnKwe2O9F9qus0wyS8Dk\nmEQABy5d3Pvm17YIlgAAegiWRszsGY53cC+YMd0TBuZqKn1sW9kl5yyN0FR2yim5dHHPdp25sVzm\nDAzrqHHgvOO/zBIAQA+ZJRZjDDc22yZZlfFeuQNzMOX+dXybr671eJmlEXHuBevYxFUfUxzsTkM/\nAjZJsAQA0EOwNBJmwrsz9ayKDOR6bCfYjiX2K8ESi7PEjr5k3m/gvARLAAA9XA03MLNeNmHqpcVt\nm/JVPMDwZJaAxTA54SwE2Tdb2jmBgiUAgB7KcANaUlQ+lLnPCOf++rZBSY7TMlYjs8RsORj228TN\nLafMAZB1LbmfsE+wBADQQxmOxZBJ4DAlOWAdgqUBOGhv11EHvjlu800d4FefZ47bCeC8lOEAAHoI\nloDFk1ED+ijDMSuHS1MOgqez5JKc85foc7BfLK1fsE9mCQCgh8wSk7e0TMCuXu+li3tm0cCRljbu\nCpaYLQd6zmJ1v1naAQHWscR+oQwHANBDZonJWtrsZojX66RW4MDSxtxVMktMUl+nvXz9ioP7hi11\nkLQfwb6ljgEHBEsAAD2U4ZiUpc5ulvq6AcZAsMRkrBMwzK1sMqYgaak3rHSzSlYt7ZYa9vt9ynAA\nAD1klhg9M5vxcZUcsCSCJUZr6UHS0l//2LhZJQeWMlmwnz9OGQ4AoIfMEqNiJjOtbbC0k11hDPS7\n3RMsMRpTChK2ZYrbYCklCThsLkHLFMedXVOGAwDoIbPE4Mxq5mEus2w4jSHuP7ap/2PsXZ9gaQDK\nFo/TWffNZTvYt1myKe3/cxlzdkUZDgCgh8wSgzCrmTclOZZsF6W5o/7Har87/DPnI1jiTM5yMNRh\nj2a7TM/l61e8b6zl8H5ymnFz3YBn9W/H/cz5KMMBAPSo1trQbch31m3thfWyoZsxiLmXKnY9s5nS\n9lzKrG9K78lpLOX9gzn7YHvgE621u09aT2YJAKCHc5YGNsQ9OrZtyBm3E4vHx3sCTJ1gaUSmdI+O\n4yhNrGdp22kO+/aqpb1/sI51+/cU+48yHABADyd4T8QYZ+Rjnx3sYpudNmMy9m22C2Pcl0/L+wiP\nO2ufHkM/WvcEb2W4iRjDTsXNTnvPFOZ5nh4s1Xn68JTuV6YMBwDQQ2aJ2RryKqypzJYAhjSVj2QR\nLDFrQ1yFNfZOD3BeSyuhK8MBAPSQWWIRtl2Sk006m6ndf8n7DNsx9pO9T7x1QFW9I8n/lOTR1tr3\ndctuS/IrSZ6V5AtJ/ufW2p9WVSX5F0lekeRrSf5ea+2TJzXCrQPYpXUOzGPutHO1eu7CGIMn+wTs\n23b/3GVf2+Rnw70zycsPLXt9kg+11u5K8qHu9yT5oSR3dV/3Jnnbug0GABijE8twrbXfqqpnHVp8\nT5KXdD+/K8lHkryuW/7utp+u+p2qempVXWit3dhUg+G8ZAjGyfsCwxhbJndb7TnPGHPWc5aeeRAA\ntdZuVNV3d8tvT/LFlfWudcsES8DajhrUhhjQBXDMwdiCoaGc5zYFmz7Bu45YduRJUVV1b/ZLdXly\nnrLhZgAAbMZZg6UvHZTXqupCkke75deS3Lmy3h1Jrh/1BK21+5Lcl+yf4H3GdgALscuPSZFRYuxk\ni3brrMHSg0leleTN3ff3rSx/bVW9J8kLk3zF+UrApp0mmDnthxw7CDF29tHzOcttCk4Mlqrql7N/\nMvfTq+pakp/JfpB0f1W9OskfJvmxbvX3Z/+2AVezf+uAnzxVawAARmadq+F+/Jg/3XRjpO4quNec\nt1EAm3LaGaQSHGMkmzQsd/AGgJESJG3HwXa95cJ66/tsOACAHoIlAIAeynAAMCJKb+MjswQA0EOw\nBADQQxkO4BzWKZlcurj3Leu5PQHHUYIbJ5klAIAeMksAazrrrP/w42SZOExGabce73dX11pfZglg\nDds6mF2+fsWBcuG8/7t1lgmKYAkAoIcyHMAhQ8z0lebG4aj34SyfUn/a/8X2nec9FCwBrHAAm6ez\nvK+rjxHMTtt53zNlOACAHjJLABlXRmlbZZ+l2PZ7edTzn/b9GtP+xskES8DiOXBN39Dv4eH/L9gd\nl/NOQJThAAB6yCwBizV0NqLPQdtkKPqN9T30/s2LzBKwSGM9yLI+7yG7IlgCAOihDAcsimzE9E3p\nPXRl4zxUa23oNuTu5z25fezyncf+3Y4GbMKUDrKrjIHTfe9Wrb6Pc3g9U7X6PnywPfCJ1trdJz1G\nGQ4AoMckynDuXwGcx9Rn8Uu/smrq798BJbnpmkSwdJjP6AGYv7kESUyfMhwAQI9JZpZWyTIBfeaU\nnVhSGWdO79uqub6uuZt8sLRq6XV9gKkTTDBGynAAAD1mlVk6oDQHzJUMOuze7DNLUrqwTJevX5l1\n/5/ja5vja2IeZh8sAQCcxyKCpbnPMIFlMrbBbszynKXjOJcJlkEAMS3eL8ZuEZklAICzEiwBMBhZ\nJaZgscGSDgrzs9RzeJb4muG0Ll3cO/MpOIsNlgAA1rHoYGmps1BgfqY2nk2tvdvkgqPxW3SwdECH\nhenTj4HjnDcgFSwBAPQQLHWkhIE5MJZN03lOPmb7FnVTSgAYs0sX97Ya7B4EZEsIqDcZfMosAQD0\nkFk65PL1K1KhMCFLmCHPjfes3zazP0vY9ts4hsssAcCAjgtgDs5jMoFf37a2lWAJAKCHMhwAjNxq\nxmQJpbTT2nb2TWYJAKCHzNIRDqJ2dWKAzZEROd5pjjvbvr3AVOzyGC1YAoCJOSpQWEIANVQSQxkO\nAKCHzBIAzEBf1uWkrNNpMza7uMv4mAiWAGDmNh2AjDGg2SZlOACAHjJLwCQt4WRWYBwES0dYWnoR\nADieMhwAQA/BEgA74UNhmSplOAB2wnlmTJXMEgBAD8ESAIyE7Ns4CZYAAHoIlgAAegiWDnGlBgCw\nSrAEACNy+foV5y6NjGAJAKDHicFSVb2jqh6tqk+vLHtjVf1RVV3pvl6x8rc3VNXVqvpcVV3aVsM3\nzc3SALZHpoQpW+emlO9M8q+SvPvQ8re21v756oKqem6SVyb5m0kuJvlgVT2ntfaNDbQVgBOY9MHm\nnZhZaq39VpI/WfP57knyntbaY621P0hyNckLztE+AIBBneecpddW1cNdme5p3bLbk3xxZZ1r3bKb\nVNW9VfVQVT30n//LsIknMzEA4DhnDZbeluR7kuwluZHk57vldcS67agnaK3d11q7u7V29zO+65Yz\nNuN8nKcE06X/ArtypmCptfal1to3Wmt/meQX8nip7VqSO1dWvSPJ9fM1EQBgOOuc4H2TqrrQWrvR\n/fojSQ6ulHswyS9V1Vuyf4L3XUk+du5WAhzi6ipgV04Mlqrql5O8JMnTq+pakp9J8pKq2st+ie0L\nSf5+krTWPlNV9yf5bJKvJ3nNWK+Ek76HaTvow4KmfcY02J4Tg6XW2o8fsfjtPeu/KcmbztMoAICx\nOFMZbsrMvgCA01hUsCRQAmDsHKvGx2fDAQD0mH1mSYQOAJzHrIIlgRGwRMY+2C5lOACAHpPOLJlN\nAUtmDITdGEWw9PmHn6LTAwCjpAwHANBDsAQwQVPLxk+tvbBKsAQAIyGoHCfBEgBAj1Gc4A3AemQe\nYPdklgAAegiWAAB6CJYAJkIJDobhnCUAGJhAeNxklgAAesgsAYycrAMMS7AEMDKCIxgXZTgAgB4y\nS8CkHWRhLl+/MnBLzmZJWaSpv1fbsqR9YKoESwA74IAI06UMBwDQQ7AEsGWySt/K9th36eKebTER\ngiVgFsZ40HEwPJ5tw5QIlgAAegiWgNkYU7ZiLO1gnOwf0yJYAmZnyAPRmAK2KbCtmALBEgBAD/dZ\nAmZpNWOxzZsgyozA/AmWYEPOekB2sN0+23jclnRnb/viNCnDAQD0kFmCM9rkLPjgucw6WbJdlU6H\non9Pl2AJ1rDNgXv1uS9fv2JABRgZZTgAgB4yS3CMocoASnIwn5KcfjwPgiXojG1AVpKDfZcu7o2u\nf7IsynAAAD1klli8Mc9YleRg35TuxaS/zo/MEgBAD5klFmkKs1PgZs5fYgiCJRZnigOtk73hcWO8\nUk7/nDdlOACAHjJLLMZYZqBn5WRvuNnQWSb9cRkES8za1AOkowia4GhH9YltjAH63vIowwEA9JBZ\ngoly0jecTB9hEwRLzNYcS3CHHfUaHRwANksZDgCgh2AJZmYJGTWAXVKGgxlaDZiU5QDOR2YJAKCH\nzBKzowwFwCbJLMHMXb5+RQAJcA6CJQCAHoIlWAjZJYCzESzBgijJAZyeYAkAoIdgCRZIdglgfYIl\nZkUQsD4lOYD1CJYAAHq4KSWzcuninmwJwEKddvy/5cJ66wmWAIDJ2eXEWBkOAKCHzBIAMAlDnWZx\nYmapqu6sqg9X1SNV9Zmq+qlu+W1V9YGq+r3u+9O65VVV/7KqrlbVw1X1/G2/CODsnOMFTMGQY9U6\nZbivJ/lHrbXvTfKiJK+pqucmeX2SD7XW7kryoe73JPmhJHd1X/cmedvGWw0AsCMnluFaazeS3Oh+\n/mpVPZLk9iT3JHlJt9q7knwkyeu65e9urbUkv1NVT62qC93zAACsZSyZ71Ods1RVz0ryA0k+muSZ\nBwFQa+1GVX13t9rtSb648rBr3TLBEozUwYB06eLewC0BGE+QdGDtq+Gq6tuT/GqSn26t/Vnfqkcs\na0c8371V9VBVPfQXeWzdZgAA7NRawVJV3Zr9QOkXW2u/1i3+UlVd6P5+Icmj3fJrSe5cefgdSa4f\nfs7W2n2ttbtba3ffmiedtf1wk0sX92RIACZqbFmlZL2r4SrJ25M80lp7y8qfHkzyqu7nVyV538ry\nv9tdFfeiJF9xvhIAMFXrnLP04iQ/keRTVXUQ7v3jJG9Ocn9VvTrJHyb5se5v70/yiiRXk3wtyU9u\ntMUAADu0ztVwv52jz0NKkpcdsX5L8ppztgsAWIgxlt5W+bgTZst5S6c39gELYAiCJQCAHoIl4Jtk\n4wBuJlhi1txG4HSU4QBuJlgCAOghWGIRZJcAxufy9SuTyGgLloBvElQC3EywBADQY507eNPj8vUr\nZuMTcfA+TSHlC3Nxnv5mbGUsBEsnWKejH7WOTj5ely7uCZhgizbVv056HuMsu6IMBwDQQ2bpkG3M\niMx+xkdJDqbvcP811rItgqXONg+aAqfxUpLbZ79kDpwSwbYowwEA9Fh0ZmmIjIKr58ZHSQ42Z2z9\nSGafTVhsZmlsHZrhLXUgXerrZnkO7hZt/Oe0FhssAQCsY3FluDHMKA7aYEY/Pke9J2PYZ4DNMg5z\nGovKLI3toDe29nC0uQ6mly7uzfa1AWzSooIlAIDTmn0ZTvaGTVjNwEx5n5JJYqncU43zmG2wpFOw\nLVMNnARK7IKghDlShgMA6DHLzNKUZjWuyGCb7Fewb0rHBcZnVsGSzsCujbEkJ0BiaO6Kz7qmsq8o\nwwEA9JhNZmnsUSnzd1xGZ1v7pgwSwG5MMlgSGDElq2lmAQ5LMuYr4/RFTkMZDgCgxyQzSzBFZrIs\n0ZhO4NUHx2vMWchkQsHSmDfiJijRAJyd8ZNtUoYDAOghWAJg686b+bl0cU/2iMEIlgAAekzinKW5\nn68EQL/jjgOyTfNx1Hs5luP/qDNLl69fGc2GAgB2ayzB8KiDJQCAoU2iDAfA9G36g6fHknVgu8Zw\nry7BEgA7d57ASZDErinDAQD0GEVm6Tnf/7VcvuxEboAlkili7GSWAIDRGzKoFiwBAPQYRbD0+Yef\nIg0LAIzSKIIlAICTDPUZgYIlAIAeo7gajs1Y514lyp0AcDqCpYk6651MDz9O8ATA1Fy6uLfTO3or\nwwEA9JBZmpBtRNEHzynDBABHk1maiG2nG4f8gEIAOK1dXhknWAIA6CFY4psuX78iwwQAhwiWuImA\nCYCp2EUpTrAEANDD1XAjcVxkPFSW57j/e9DOy9evnCqaP+36ADAWgiVOZTWIOm0gt7q+wAk4bN1P\nIThpPePL8qxO5LdBGQ4AoEe11oZuQ+5+3pPbxy7fOXQzBjW2MtwumQXCMgw5nhlnluM0+9ktF65+\norV290nrKcMNTAd2F3GYs7FM+JwGwHkowwEA9JBZYjRcMQfTN5ZMUh9ZpnnbxsnegqURm8Kgs2lK\ncjBNUx2vBE7ztc6Vk+tShgMA6DGKYOnzDz9FRL/CZ7RNd5YKSzSX/jqX18HjLl3c20h8MYpgCYDp\nmePEbo6vifOXWAVLAAA9TgyWqurOqvpwVT1SVZ+pqp/qlr+xqv6oqq50X69YecwbqupqVX2uqi5t\n8wVMmdJjPzM8GK+59825v74lOijJneXYu87VcF9P8o9aa5+squ9I8omq+kD3t7e21v756spV9dwk\nr0zyN5NcTPLBqnpOa+0bp27dTAmSgKlaUhDh6tz5evw9vbrW+idmllprN1prn+x+/mqSR5Lc3vOQ\ne5K8p7X2WGvtD7qWvGCt1gAAjMypzlmqqmcl+YEkH+0WvbaqHq6qd1TV07pltyf54srDruWI4Kqq\n7q2qh6rqob/IY6du+BwpOwFjttTxaamvm8etHSxV1bcn+dUkP91a+7Mkb0vyPUn2ktxI8vMHqx7x\n8Js+rbe1dl9r7e7W2t235kmnbjgA7IrJ7LKtFSxV1a3ZD5R+sbX2a0nSWvtSa+0brbW/TPILebzU\ndi3JnSsPvyPJ9c01GQBgd048wbuqKsnbkzzSWnvLyvILrbUb3a8/kuTT3c8PJvmlqnpL9k/wvivJ\nxzbaahbFSZYwLBmVx/l4lGVaJ7P04iQ/keSlh24T8M+q6lNV9XCSv53kf0uS1tpnktyf5LNJfiPJ\na9a9Es6OBzAuAqXj2TbLcWJmqbX22zn6PKT39zzmTUnedI52AQCMwjr3WQIAjqAstwyjC5YOdral\npTeX9nqBcTMmnZ7zK+fLZ8MBAPQQLO2YGQfAvMnKzc/oynBzJUgCgGmSWQIA6DHaYGlOmZg5vZYh\nXLq4ZxsCk+LjUeZFGW5LHNwBYB5Gm1kCABiDUWeWpnjPJRklAJiXUQdLBy5d3Bt1wCRAAoD5UoYD\nAOgxicxSMr6SnGzS9tnGwNRdvn7FWDYDkwmWDgxVkrOzA7ALRx3jHIOGpQwHANBjcpml5Fsj7G1n\nmUTzAGzbSceyvr87Tm3fJIOlbbPjDc97ALCe1UDK2LkdynAAAD0mn1na1FVyovFx8D4AMDaTD5YO\nHD7IjuUWAwBTNLbbtUzZwTY0GZwuZTgAgB6zySwdJoKfHu8ZAGMkswTAsUxiQLAEANBrtmU4psPM\nFYAxk1kCAOghWAKg16WLezLAG+A2DNMlWGJQBmCYDv11ewSk4yZYAgDoIVgCYG0yICyRYIlBGHBh\n2vTfs7l8/UrvuUvn2a7ek+0RLAEA9HCfJXbGrAfmxYftbsdRY6VtPCyZJQDOxURoWE5r2D7BEgBA\nj2qtDd2GfGfd1l5YLxu6GYObc5rVrAeWY85j2SYZF4f3wfbAJ1prd5+0nnOW2CqDASyPc5mYG2U4\nAIAegiW2RlYJls0Y0O+key4xHspwIzKX1LUBEjgwl3GNZZNZAgDo4Wq4EZviTExWCTjJFMe2bTN2\nDmPdq+FkltgIN0UD1mWsYGoESwAAPZzgPWKXLu6NLl1tRghswupYMrZxDg6TWRq5MZW3xtIOYF7G\nNM7BUQRLAAA9lOHoZbYH7MoYTz3YlYPXbcwdJ8HSROyyvq+zAsDjlOEAAHrILE3QJlPVskjAmPh4\nFMZIsDRRJwU5hwcaQREwJUs+f4nxUYYDAOghszRTMkkAsBkySwCMkptVMhaCJQCAHoIlAIAegiUA\nRm0JpTglx3ETLAEA9BAsAQD0cOsAWJCTbvKnDMBYubM3Q5JZAgDoIbMEM3TW2ffq42SZYDf0tfET\nLMFMbLo84fMFGSOfGccQlOEAAHrILMGE7XKGffC/ZJiApTkxs1RVT66qj1XV71bVZ6rqn3TLn11V\nH62q36uqX6mqJ3bLn9T9frX7+7O2+xKAXVICYWhu4MiurVOGeyzJS1trz0uyl+TlVfWiJD+X5K2t\ntbuS/GmSV3frvzrJn7bW/kaSt3brAQBM0olluNZaS/Ln3a+3dl8tyUuT/C/d8ncleWOStyW5p/s5\nSR5I8q+qqrrnATZkyAyPq+bg/PSd6VjrBO+quqWqriR5NMkHkvynJF9urX29W+Vaktu7n29P8sUk\n6f7+lSTftclGA+Nx+foVpTkGIdhgV9YKllpr32it7SW5I8kLknzvUat136vnb99UVfdW1UNV9dBf\n5LF12wsAsFOnunVAa+3LST6S5EVJnlpVB2W8O5Jc736+luTOJOn+/teS/MkRz3Vfa+3u1trdt+ZJ\nZ2s9LNBYMzljbBOMlazYtKxzNdwzquqp3c/fluQHkzyS5MNJfrRb7VVJ3tf9/GD3e7q//6bzlWAZ\nxhrIMV9jujJuTG1hs9a5z9KveNYVAAALvElEQVSFJO+qqluyH1zd31r79ar6bJL3VNXPJvkPSd7e\nrf/2JP+2qq5mP6P0yi20GwBgJ2oMSZ/vrNvaC+tlQzcDRm1KGRuza4YwRB852NfX+d/6xfh8sD3w\nidba3Set5w7ewMZdvn7FgYFFECQtg8+GAwDoIbMEbIXPkmPXTlMSO8vzHjjN89v/50GwBMCsXLq4\nt9GA6bTPJUCaH2U4AIAeMkvAVjnZmyFsqyR30v9jngRLAMzWahCzjcBJkLQMynAAAD1klkZs3VmQ\nmQ1j58o4xsD+x1kJlga2ibTwUc9hUACAzVCGAwDoIbM0gF1cnbH6P2SZGAtXxgFTNNtgaWw3ERvy\nQ1AdoADg7JThAAB6zCqzdJ7szTav1hkyq3S4DTJMDM2+CEzNbDJLmwpINv15QmMIlFaNrT0AMHaz\nCZYAALZh0mW4bWVJNnEl2ZgzOMogALA+mSUAgB6CJQCAHpMsw+2yxHXaktWYy28AwOnJLAEA9Jhc\nsDTmzM2Y23aUqbV36S5d3JvVSfn2P2AqJlmGG5spD/qujAOAfpPLLAEA7NJkgqWh74Z93P+eclaJ\n+ZAZBNieSZThxhiQjLFNAMDmTSazBAAwhFFnlsaavRlru1gu+yTA9ow2s2Twh/kb+lxEgHWMNlgC\nABgDwRJJZPIA4DijPmdpbOYcULj0fDoO3qs5748AYyKzBADQYxSZped8/9dy+bJZMjANm8rqyejC\nNIwiWGJ4l69fMXBPnPLc2Q21zVb/r/4H46UMBwDQQ2aJJGa1LM/YMnCyuzBegiWYibEd/MdqzNvp\noG2CJhgXZTgAgB6CJWAxxpxVWjWVdsJSCJZgZpRw5sHn5sF4CJYAAHoIlhbu0sU9mYiJ8r6tb8pZ\nmqm2G+ZEsAQz4+AKsFmCJQCAHoIlmJkpleeUgdcz5TIizIFgCQCgh2AJAKCHYAlmRrkGYLMESwvm\nXJH5ci7QPAmEYRiCJQCAHoIlmDAZJIDtEyzBDB1caj7mQGrMbRsztxGA3RMsAQD0ECwBAPR4wtAN\nYPeUP5ZjtRSndANwNjJLAAA9BEswA33ZwrGd7O0Kvs2QKYTdESwtjIPUcjm4ApyNYAkAoIcTvBdC\nRmn+pnAit/0QmCKZJZiZMQYkzlPaDjeohN0QLAEA9FCGgxnaVElu9XmmUOY7q0sX9yb9uk5qu6we\nnI9gqTP3AwHLtPren3bfXn3seYKJKex/c+z3qw6/vim8JzAmynAAAD1OzCxV1ZOT/FaSJ3XrP9Ba\n+5mqemeS/yHJV7pV/15r7UpVVZJ/keQVSb7WLf/kNhoPrO+02aHzZFtkLsZt9b31XsHJ1inDPZbk\npa21P6+qW5P8dlX9u+5v/0dr7YFD6/9Qkru6rxcmeVv3nR0zCHLYNsrNc9vPpn7+0mkJnOBkJ5bh\n2r4/7369tftqPQ+5J8m7u8f9TpKnVtWF8zcVAGD31jrBu6puSfKJJH8jyf/VWvtoVf2DJG+qqv8z\nyYeSvL619liS25N8ceXh17plNw49571J7k2Sv3778OeZL2kmCec58fvw46fgNBm1JY8FB699au8v\nbNtaUUpr7RtJ9qrqqUneW1Xfl+QNSf7fJE9Mcl+S1yX5p0nqqKc44jnv6x6Xu5/35L5MFWdgsGNd\n9pWbt8GSA6Yko/rgZRiDU10N11r7cpKPJHl5a+1GV2p7LMm/SfKCbrVrSe5cedgdSa5voK0AADu3\nztVwz0jyF621L1fVtyX5wSQ/V1UXWms3uqvffjjJp7uHPJjktVX1nuyf2P2V1tqNI5+88/mHn7K4\nkyq3xWwQTs/YczMlOXjcOpmlC0k+XFUPJ/l4kg+01n49yS9W1aeSfCrJ05P8bLf++5P8fpKrSX4h\nyT/ceKu3YA6fXTX19sO2rdtH5jAebIpAEtbILLXWHk7yA0csf+kx67ckrzl/0wAAhjf8ZWhJnvP9\nX8vly2YvZ2UGDOtb58o42ZRvpSTH0vm4k0MMBgBHE0SyVIIlAIAegqWJkwmDs9F3gHUJlo7gShhY\nBn0dWIdgCQCgxyiuhuP0zIYBYDdklnqMNSAZa7uA+bt8/Yqr4lgcwRIAQI/av+H2wI2o+s9J/r8k\nfzx0Wybi6bGtTsP2Wp9tdTq21/psq9OxvdZ3nm3137TWnnHSSqMIlpKkqh5qrd09dDumwLY6Hdtr\nfbbV6dhe67OtTsf2Wt8utpUyHABAD8ESAECPMQVL9w3dgAmxrU7H9lqfbXU6ttf6bKvTsb3Wt/Vt\nNZpzlgAAxmhMmSUAgNEZPFiqqpdX1eeq6mpVvX7o9oxRVX2hqj5VVVeq6qFu2W1V9YGq+r3u+9OG\nbudQquodVfVoVX16ZdmR26f2/ctuf3u4qp4/XMt375ht9caq+qNu/7pSVa9Y+dsbum31uaq6NEyr\nh1FVd1bVh6vqkar6TFX9VLfcvnWEnu1l/zqkqp5cVR+rqt/tttU/6ZY/u6o+2u1bv1JVT+yWP6n7\n/Wr392cN2f5d69le76yqP1jZt/a65Zvvi621wb6S3JLkPyX5b5M8McnvJnnukG0a41eSLyR5+qFl\n/yzJ67ufX5/k54Zu54Db528leX6ST5+0fZK8Ism/S1JJXpTko0O3fwTb6o1J/vcj1n1u1yeflOTZ\nXV+9ZejXsMNtdSHJ87ufvyPJ57ttYt863fayf9382ivJt3c/35rko90+c3+SV3bL/3WSf9D9/A+T\n/Ovu51cm+ZWhX8NIttc7k/zoEetvvC8OnVl6QZKrrbXfb6391yTvSXLPwG2ainuSvKv7+V1JfnjA\ntgyqtfZbSf7k0OLjts89Sd7d9v1OkqdW1YXdtHR4x2yr49yT5D2ttcdaa3+Q5Gr2++witNZutNY+\n2f381SSPJLk99q0j9Wyv4yx2/+r2kT/vfr21+2pJXprkgW754X3rYJ97IMnLqqp21NzB9Wyv42y8\nLw4dLN2e5Isrv19Lf+daqpbk31fVJ6rq3m7ZM1trN5L9QSrJdw/WunE6bvvY54722i5d/Y6Vkq5t\n1enKHj+Q/RmtfesEh7ZXYv+6SVXdUlVXkjya5APZz6x9ubX29W6V1e3xzW3V/f0rSb5rty0e1uHt\n1Vo72Lfe1O1bb62qJ3XLNr5vDR0sHRUZuzzvZi9urT0/yQ8leU1V/a2hGzRh9rmbvS3J9yTZS3Ij\nyc93y22rJFX17Ul+NclPt9b+rG/VI5bZXvavI7XWvtFa20tyR/Yzat971Grd90Vvq+Tm7VVV35fk\nDUn+uyT/fZLbkryuW33j22voYOlakjtXfr8jyfWB2jJarbXr3fdHk7w3+x3rSwdpxe77o8O1cJSO\n2z72uUNaa1/qBqK/TPILebwUsvhtVVW3Zv/A/4uttV/rFtu3jnHU9rJ/9WutfTnJR7J/bs1Tq+oJ\n3Z9Wt8c3t1X397+W9cvps7KyvV7elX5ba+2xJP8mW9y3hg6WPp7kru4KgCdm/8S1Bwdu06hU1V+t\nqu84+DnJ30ny6exvp1d1q70qyfuGaeFoHbd9Hkzyd7urJV6U5CsHJZWlOlTL/5Hs71/J/rZ6ZXcl\nzrOT3JXkY7tu31C6c0LenuSR1tpbVv5k3zrCcdvL/nWzqnpGVT21+/nbkvxg9s/x+nCSH+1WO7xv\nHexzP5rkN1t3JvMSHLO9/uPKpKWyf37X6r610b74hJNX2Z7W2ter6rVJLmf/yrh3tNY+M2SbRuiZ\nSd7bncv3hCS/1Fr7jar6eJL7q+rVSf4wyY8N2MZBVdUvJ3lJkqdX1bUkP5PkzTl6+7w/+1dKXE3y\ntSQ/ufMGD+iYbfWS7pLblv0rL/9+krTWPlNV9yf5bJKvJ3lNa+0bQ7R7IC9O8hNJPtWdK5Ek/zj2\nreMct71+3P51kwtJ3lVVt2Q/aXF/a+3Xq+qzSd5TVT+b5D9kP/hM9/3fVtXV7GeUXjlEowd03Pb6\nzap6RvbLbleS/K/d+hvvi+7gDQDQY+gyHADAqAmWAAB6CJYAAHoIlgAAegiWAAB6CJYAAHoIlgAA\negiWAAB6/P/povWIujOACgAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7ffba88cab00>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.figure(figsize = (10,10))\n",
+    "plt.imshow(np.load(\"../data/stage_1_processed/train/train_0532c64c2fd0c4d3188cc751cdfd566b1cfba3d269358717295bab1504c7c275.npy\")[:,:,1])\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
