--- a/notebooks/investigator.ipynb
+++ b/notebooks/investigator.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +138,7 @@
     "        \n",
     "        \n",
     "        #print(im_w_mask.shape)\n",
-    "        np.save(\"../data/ext_data_processed/\" + prefix + \"/\" + prefix + \"_\" + name, im_w_mask)\n",
+    "        np.save(\"../data/stage_1_processed/\" + prefix + \"/\" + prefix + \"_\" + name, im_w_mask)\n",
     "        \n",
     "        if store:\n",
     "            im_w_mask_list.append(im_w_mask)\n",
@@ -150,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2007b5be4d4a4dc8b65260e6eeebf932",
+       "model_id": "5611984a96ed4c9e90324aa028cae6cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "im_w_mask_list = process_data(train_names[:], prefix='train')#, store=True)"
+    "im_w_mask_list = process_data(val_names[:], prefix='val')#, store=True)"
    ]
   },
   {
