--- a/notebooks/Unet.ipynb
+++ b/notebooks/Unet.ipynb
@@ -594,7 +594,7 @@
     "\n",
     "    train_loss.append(curr_loss / (i + 1)) \n",
     "    \n",
-    "#     val_score = 0\n",
+    "    val_score = validate(val_data)\n",
     "#     for val_im in tqdm(val_data[:]):\n",
     "#         prediction = sess.run(out, feed_dict={x : np.expand_dims(get_16_im(val_im[:,:,:1]), 0), training : False})\n",
     "#         mask = prediction[0][:val_im.shape[0],:val_im.shape[1],:1]\n",
@@ -618,11 +618,11 @@
     "            \n",
     "#     val_scores.append(val_score / len(val_data))\n",
     "\n",
-    "#     display.clear_output(wait=True)\n",
-    "#     plt.plot(train_loss, label='train')\n",
-    "#     plt.plot(val_scores, label='test')\n",
-    "#     plt.legend()\n",
-    "#     plt.show()\n",
+    "    display.clear_output(wait=True)\n",
+    "    plt.plot(train_loss, label='train')\n",
+    "    plt.plot(val_scores, label='test')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
     "            \n",
     "#     val_loss = sess.run(loss,  feed_dict={inp : X[4000:].reshape(-1, 100), target: y[4000:].reshape(-1, 100)})\n",
     "#     val_losses.append(val_loss)\n",
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 187,
    "metadata": {
     "collapsed": true
    },
@@ -726,11 +726,153 @@
     "def predict(im):\n",
     "    shape = im.shape\n",
     "    im_16 = get_16_im(im)\n",
-    "    prediction = sess.run(out, feed_dict={x : np.expand_dims(im_16, 0), training : False})\n",
-    "    prediction = prediction.sum(2)\n",
-    "    \n",
-    "    return prediction[:shape[0],:shape[1],0]"
+    "    prediction = sess.run(out, feed_dict={x : np.expand_dims(im_16, 0), training : False})[0]\n",
+    "    prediction = prediction.max(2)\n",
+    "    return cv2.morphologyEx(prediction[:shape[0],:shape[1]], cv2.MORPH_CLOSE, np.ones((3,3)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate(data):\n",
+    "    predictions = [predict(im[:,:,:1]) for im in data]\n",
+    "    ground_truth = [im[:,:,1:2] for im in data]\n",
+    "    \n",
+    "    MAP = 0\n",
+    "    for t,p in tqdm(zip(ground_truth, predictions)):\n",
+    "        MAP += calculate_average_precision([x for x in prob_to_masks(t)], [x for x in prob_to_masks(p)])\n",
+    "    \n",
+    "    return MAP / len(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validate(val_data[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from skimage.morphology import label # label regions\n",
+    "def rle_encoding(x):\n",
+    "    '''\n",
+    "    x: numpy array of shape (height, width), 1 - mask, 0 - background\n",
+    "    Returns run length as list\n",
+    "    '''\n",
+    "    dots = np.where(x.T.flatten()==1)[0] # .T sets Fortran order down-then-right\n",
+    "    run_lengths = []\n",
+    "    prev = -2\n",
+    "    for b in dots:\n",
+    "        if (b>prev+1): run_lengths.extend((b+1, 0))\n",
+    "        run_lengths[-1] += 1\n",
+    "        prev = b\n",
+    "    return run_lengths\n",
+    "\n",
+    "def prob_to_rles(x, cut_off = 0.5):\n",
+    "    lab_img = label(x>cut_off)\n",
+    "    if lab_img.max()<1:\n",
+    "        lab_img[0,0] = 1 # ensure at least one prediction per image\n",
+    "    for i in range(1, lab_img.max()+1):\n",
+    "        yield rle_encoding(lab_img==i)\n",
+    "        \n",
+    "def prob_to_masks(x, cut_off = 0.5):\n",
+    "    lab_img = label(x>cut_off)\n",
+    "    if lab_img.max()<1:\n",
+    "        lab_img[0,0] = 1 # ensure at least one prediction per image\n",
+    "    for i in range(1, lab_img.max()+1):\n",
+    "        yield (lab_img==i).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def iou_at_thresholds(target_mask, pred_mask, thresholds=np.arange(0.5,1,0.05)):\n",
+    "    '''Returns True if IoU is greater than the thresholds.'''\n",
+    "    intersection = np.logical_and(target_mask, pred_mask)\n",
+    "    union = np.logical_or(target_mask, pred_mask)\n",
+    "    iou = np.sum(intersection > 0) / np.sum(union > 0)\n",
+    "    return iou > thresholds\n",
+    "\n",
+    "def calculate_average_precision(target_masks, pred_masks, thresholds=np.arange(0.5,1,0.05)):\n",
+    "    '''Calculates the average precision over a range of thresholds for one observation (with a single class).'''\n",
+    "    iou_tensor = np.zeros([len(thresholds), len(pred_masks), len(target_masks)])\n",
+    "\n",
+    "    for i, p_mask in enumerate(pred_masks):\n",
+    "        for j, t_mask in enumerate(target_masks):\n",
+    "            iou_tensor[:, i, j] = iou_at_thresholds(t_mask, p_mask, thresholds)\n",
+    "\n",
+    "    TP = np.sum((np.sum(iou_tensor, axis=2) == 1), axis=1)\n",
+    "    FP = np.sum((np.sum(iou_tensor, axis=1) == 0), axis=1)\n",
+    "    FN = np.sum((np.sum(iou_tensor, axis=2) == 0), axis=1)\n",
+    "\n",
+    "    precision = TP / (TP + FP + FN)\n",
+    "\n",
+    "    return np.mean(precision)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
